RESOLVED FIXED41520
[Qt] QScriptEnginePrivate compilation fix
https://bugs.webkit.org/show_bug.cgi?id=41520
Summary [Qt] QScriptEnginePrivate compilation fix
Jędrzej Nowacki
Reported 2010-07-02 05:52:14 PDT
There is a compilation problem. QScriptEnginePrivate::newArray can't be const because it calls setException which is non const. WebKit-script/JavaScriptCore/qt/api/qscriptengine_p.cpp: In member function ‘QScriptValuePrivate* QScriptEnginePrivate::newArray(uint) const’: WebKit-script/JavaScriptCore/qt/api/qscriptengine_p.cpp:105: error: passing ‘const QScriptEnginePrivate’ as ‘this’ argument of ‘void QScriptEnginePrivate::setException(const OpaqueJSValue*, unsigned int)’ discards qualifiers
Attachments
Fix v1 (1.98 KB, patch)
2010-07-02 05:54 PDT, Jędrzej Nowacki
no flags
Jędrzej Nowacki
Comment 1 2010-07-02 05:54:55 PDT
WebKit Commit Bot
Comment 2 2010-07-02 07:11:13 PDT
Comment on attachment 60361 [details] Fix v1 Clearing flags on attachment: 60361 Committed r62382: <http://trac.webkit.org/changeset/62382>
WebKit Commit Bot
Comment 3 2010-07-02 07:11:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.