2010-07-02  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        Compilation fix.

        QScriptEnginePrivate::newArray can't be const because it can
        throw an exception.

        [Qt] QScriptEnginePrivate compilation fix
        https://bugs.webkit.org/show_bug.cgi?id=41520

        * api/qscriptengine_p.cpp:
        (QScriptEnginePrivate::newArray):
        * api/qscriptengine_p.h:

Canonical link: https://commits.webkit.org/53300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62382 268f45cc-cd09-0410-ab3c-d52691b4dbfc