JavaScriptCore/qt/api/qscriptengine_p.h
@@ -71,7 +71,7 @@ public:
     inline JSValueRef makeJSValue(QScriptValue::SpecialValue value) const;
 
     QScriptValuePrivate* newObject() const;
-    QScriptValuePrivate* newArray(uint length) const;
+    QScriptValuePrivate* newArray(uint length);
     QScriptValuePrivate* globalObject() const;
 
     inline QScriptStringPrivate* toStringHandle(const QString& str) const;
